--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -7,8 +7,8 @@
   "Contact": "Contacto",
   "Do you have any question regarding the project? Feel free to reach out.": "¿Tiene alguna pregunta sobre el proyecto? No dude en contactarnos",
   "Let's Chat": "Charlemos",
-  "Application Security": "Seguridad de la aplicación",
-  "Software Principles": "Principios de software",
+  "Data Processing Policy": "Seguridad de la aplicación",
+  "Term of Services": "Principios de software",
   "Support Center": "Centro de Apoyo",
   "Customer Support": "Atención al cliente",
   "ADDRESS": "HABLA A",
